--- a/HTML 5 VIDEO PLAYER/index.html
+++ b/HTML 5 VIDEO PLAYER/index.html
@@ -20,7 +20,8 @@
       </div>
 
    <div class="player">
-     <video class="player__video viewer "  src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+     
+     <video class="player__video viewer "  src="https://www.w3schools.com/html/mov_bbb.mp4"></video> //This video is from the internet, actual video used during making this is in the local device
 
      <div class="player__controls">
        <div class="progress">
